--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+.container {
+	display: grid;
+}
+
 .zone {
 	cursor: pointer;
-	display: inline-block;
 	text-align: center;
 	font-size: 10em;
 	border-radius: 4px;
